--- a/public/css/database.css
+++ b/public/css/database.css
@@ -47,14 +47,15 @@
 #zdc .zdc-actions ul li     { float: left; display: block; margin-right: 0px; background-repeat: no-repeat; background-position: 5px center; padding: 5px 5px 5px 28px }
 #zdc .zdc-actions ul li a   { color: #151C24 !important; text-decoration: underline }
 
-#zdc .zdc-time      { background-image: url('clock.png') }
-#zdc .zdc-cache     { background-image: url('cache.png'); background-color: #CCFF99; color: #222; border: 1px solid black }
-#zdc .zdc-top       { background-image: url('top.png') }
-#zdc .zdc-close     { background-image: url('close.png') }
-#zdc .zdc-records   { background-image: url('records.png') }
-#zdc .zdc-affected  { background-image: url('affected.png') }
-#zdc .zdc-explain   { background-image: url('explain.png') }
-#zdc .zdc-backtrace { background-image: url('backtrace.png') }
+#zdc .zdc-time          { background-image: url('clock.png') }
+#zdc .zdc-cache         { background-image: url('cache.png'); background-color: #CCFF99; color: #222 }
+#zdc .zdc-unbuffered    { background-image: url('unbuffered.png'); background-color: #CCFF99; color: #222 }
+#zdc .zdc-top           { background-image: url('top.png') }
+#zdc .zdc-close         { background-image: url('close.png') }
+#zdc .zdc-records       { background-image: url('records.png') }
+#zdc .zdc-affected      { background-image: url('affected.png') }
+#zdc .zdc-explain       { background-image: url('explain.png') }
+#zdc .zdc-backtrace     { background-image: url('backtrace.png') }
 
 /* TABLES */
 #zdc .zdc-records-table th,
