--- a/public/css/database.css
+++ b/public/css/database.css
@@ -66,7 +66,7 @@
 /* DATA TABLES */
 #zdc .zdc-data-table                { background: #FFF }
 #zdc .zdc-data-table th,
-#zdc .zdc-records-table td          { border: 1px solid #888 }
+#zdc .zdc-data-table td             { border: 1px solid #888 }
 
 /* HIGHLIGHTING */
 #zdc pre                            { background: #EEE !important; border: transparent !important }
