--- a/public/css/database.css
+++ b/public/css/database.css
@@ -3,8 +3,7 @@
 
 /* COMMON */
 #zdc a                              { text-decoration: none }
-#zdc .zdc-hidden                    { display: none }
-#zdc .zdc-visible                   { display: block }
+#zdc .zdc-visible                   { display: block !important }
 #zdc table                          { border-collapse: collapse }
 #zdc table tbody tr:nth-child(even) { background: #DEDEDE }
 #zdc table td,
@@ -16,11 +15,11 @@
 #zdc .clear                         { clear: both }
 
 /* MAIN MENU */
-#zdc .zdc-main                      { background: #151C24 }
-#zdc .zdc-main li                   { border-right: 1px solid #9CA68F }
-#zdc .zdc-main li a                 { color: #FFF; padding: 12px }
-#zdc .zdc-main li a:hover           { background: #403D32 }
-#zdc .zdc-main li span              { background: orange; padding: 2px 5px; font-weight: bold; color: #000; margin: 0 4px }
+#zdc-main                           { background: #151C24; display: none !important }
+#zdc-main li                        { border-right: 1px solid #9CA68F }
+#zdc-main li a                      { color: #FFF; padding: 12px }
+#zdc-main li a:hover                { background: #403D32 }
+#zdc-main li span                   { background: orange; padding: 2px 5px; font-weight: bold; color: #000; margin: 0 4px }
 
 /* GLOBALS SUBMENU */
 #zdc-globals-submenu                { border: 1px solid #403D32 }
@@ -50,11 +49,13 @@
 #zdc .zdc-highlight .zdc-counter    { background: #926492 }
 
 #zdc .zdc-actions                   { padding: 2px; background: #CDD8BF; color: #151C24; margin-top: 1px }
-#zdc .zdc-actions ul li             { margin-right: 0px; background-repeat: no-repeat; background-position: 5px center; padding: 5px 5px 5px 28px }
-#zdc .zdc-actions ul li a           { color: #151C24 !important; text-decoration: underline }
+#zdc .zdc-actions ul li,
+#zdc .zdc-actions ul li a           { color: #151C24 !important; background-repeat: no-repeat; background-position: 5px center; margin-right: 0px }
+#zdc .zdc-actions ul li             { padding: 5px 5px 5px 28px }
+#zdc .zdc-actions ul li a           { text-decoration: underline; padding-left: 28px; margin-left: -28px }
 
 #zdc .zdc-time                      { background-image: url('clock.png') }
-#zdc .zdc-cache                     { background-image: url('cache.png'); background-color: #FFFFCC; color: #222; border: 1px solid #AAA }
+#zdc .zdc-cache                     { background-image: url('cache.png'); background-color: #FFFFCC; color: #222 }
 #zdc .zdc-unbuffered                { background-image: url('unbuffered.png'); background-color: #CCFF99; color: #222 }
 #zdc .zdc-top                       { background-image: url('top.png') }
 #zdc .zdc-close                     { background-image: url('close.png') }
@@ -75,9 +76,6 @@
 #zdc .symbol                        { font-weight: bold; color: #FF00FF }
 #zdc .indent                        { padding: 0 0 0 20px }
 
-#zdc-successful-queries,
-#zdc-unsuccessful-queries,
-#zdc-globals,
 #zdc-globals-submenu,
 .zdc-entry,
 .zdc-records-table,
